kubernetes-security/configmaps.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homework
