kubernetes-security/stClassPvPvcDp.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homework
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: init-demo
  namespace: homework
  labels:
    app: HW-5
spec:
  replicas: 3
  selector:
    matchLabels:
      app: HW-5
  template:
    metadata:
      labels:
        app: HW-5
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: dormitory-volume
          mountPath: /homework
        - name: nginx-volume
          mountPath: /etc/nginx
          readOnly: true
        - name: additional-volume
          mountPath: /homework/conf
          readOnly: true
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh","-c", "curl -k https://178.62.239.82:6443/metrics --header \"Authorization: Bearer $(cat /var/run/secrets/kubernetes.io/serviceaccount/token)\" > /homework/metrics.html"]
          preStop:
            exec:
              command: ["/bin/sh","-c","rm /homework/index.html"]
      # These containers are run during pod initialization
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
      serviceAccountName: monitoring
      dnsPolicy: Default
      volumes:
      - name: dormitory-volume
        persistentVolumeClaim:
          claimName: pvc-claim-cm-hw-5
      - name: nginx-volume
        configMap:
          name: nginx-configmap
          items:
          - key: nginx.conf
            path: nginx.conf
      - name: additional-volume
        configMap:
          name: cm-conf
          items:
          - key: conf-file
            path: file
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
