kubernetes-security/ingressSvc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-internal
  namespace: homework
spec:
  type: ClusterIP
  selector:
    app: HW-5
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: homework
spec:
  ingressClassName: nginx
  rules:
  - host: homework.otus
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-internal
            port:
              number: 80
